# python-2d-game-engine

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  note.md  pyproject.toml  pyrightconfig.json  requirements.txt
docs/: chore.md  documentation.md  my_preferences.md
jsons/: dasdsa.json  fat_fire_animation.json  fdas.json  fds.json  fdsa.json  fdsfdas.json  fire_thin_animation.json  settings.json  stage_1_fire_animation.json  stage_1_room_editor.json  stage_1_sprite_sheet_foreground_metadata.json  stage_1_sprite_sheet_meta_data.json  stage_1_sprite_sheet_meta_data.png.json  stage_1_sprite_sheet_metadata.json  stage_1_sprite_sheet_parallax_background_metadata.json  stage_1_sprite_sheet_solids_metadata.json  stage_1_sprite_sheet_static_background_metadata.json  thin_fire_animation.json  thin_fire_animation.json.json  thin_waterfall_animation.json
jsons/rooms/: room1.json  room2.json
src/: constants.py  main.py  schemas.py  todo.md  utils.py
src/actors/: parallax_background.py  player.py  stage_1_clouds.py  stage_1_colonnade.py  stage_1_glow.py  stage_1_pine_trees.py  stage_1_sky.py  static_actor.py  thin_fire.py
src/nodes/: animator.py  button.py  button_container.py  camera.py  curtain.py  debug_draw.py  event_handler.py  game.py  kinematic.py  music_manager.py  options_menu.py  quadtree.py  sound_manager.py  state_machine.py  timer.py
src/scenes/: animation_json_generator.py  created_by_splash_screen.py  made_with_splash_screen.py  main_menu.py  room_json_generator.py  sprite_sheet_json_generator.py  title_screen.py
test/: conftest.py
test/nodes/: button_container_test.py  curtain_test.py  debug_draw_test.py  game_test.py  options_menu_test.py
(+4 files in other folders)
